# Sorting_Visualizer

./: CMakeLists.txt  README.md
src/: main.c  sorting.c  sorting.h  utils.c  utils.h  visual.c  visual.h
